--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ h1 {
 img {
     width: 60%;
     height: auto;
-    margin-left: 20%;
+    /* margin-left: 20%; */
 }
 
 /* I added this to make places page look better*/
